# rustmail

./: .gitignore  Cargo.toml  README.md  test_reminders.rs
src/: main.rs  reminders.rs
src/auth/: mod.rs
src/config/: mod.rs
src/email/: mod.rs
src/ui/: app.rs  keybindings.rs  mod.rs  theme.rs  utils.rs
