[package]
name = "rustmail"
version = "0.1.0"
edition = "2021"
description = "A TUI email client with vim keybindings for Gmail"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Email
imap = "2"
native-tls = "0.2"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
mail-parser = "0.9"

# OAuth2 for Google
oauth2 = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTML parsing
html2text = "0.12"

# Fuzzy search
fuzzy-matcher = "0.3"

# Utilities
anyhow = "1"
dirs = "5"
chrono = "0.4"
base64 = "0.22"
webbrowser = "1"
